trunk/Archive2/24/c7ef49504f9463/output
main.cpp: In function 'int main()':
main.cpp:18:9: error: no matching function for call to 'foo()'
     foo();
         ^
main.cpp:18:9: note: candidate is:
main.cpp:4:16: note: template<unsigned int N> constexpr bool foo()
 constexpr bool foo()
                ^
main.cpp:4:16: note:   template argument deduction/substitution failed:
main.cpp:18:9: note:   couldn't deduce template parameter 'N'
     foo();
         ^
